# wagtail-draftail-hovercard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: publish.yml
client/: draftail-plugin.js  entrypoint.js  hovercard-modal.js
wagtail_draftail_hovercard/: forms.py  handlers.py  views.py  wagtail_hooks.py
wagtail_draftail_hovercard/templates/wagtail_draftail_hovercard/: modal.html
